--- a/osp/vp2ca_sens.cfg
+++ b/osp/vp2ca_sens.cfg
@@ -79,11 +79,11 @@ bind 3 "weapon 3"
 bind 4 "weapon 4"
 
 bind 9 "weapon 9"
-bind r "weapon 7"
 bind f "weapon 8"
 bind m "weapon 9"
-bind e "weapon 5"
-bind q "weapon 6"
+bind e "weapon 5;cg_drawCrosshair 8;cg_crosshairsize 25"
+bind q "weapon 6;cg_drawCrosshair 9;cg_crosshairsize 22"
+bind r "weapon 7;cg_drawCrosshair 9;cg_crosshairsize 22"
 bind [ "weapprev"
 bind ] "weapnext"
 
