--- a/osp/vp2ca_sens.cfg
+++ b/osp/vp2ca_sens.cfg
@@ -65,6 +65,7 @@ seta sensitivity "3.4"
 seta m_yaw "0.028" //0.022
 seta m_pitch "0.024" //0.022
 seta cl_mouseaccel "0.02" //0
+seta cl_mouseAccelOffset "10"//10
 seta cg_oversampleMouse "1" //0
 seta m_filter "1" //0
 seta in_mouse "1" //0
