--- a/osp/vp2ca_yawp.cfg
+++ b/osp/vp2ca_yawp.cfg
@@ -65,6 +65,7 @@ seta sensitivity "5"
 seta m_yaw "0.027000" //0.022
 seta m_pitch "0.024000" //0.022
 seta cl_mouseaccel "0" //0
+seta cl_mouseAccelOffset "10"//10
 seta cg_oversampleMouse "1" //0
 seta m_filter "1" //0
 seta in_mouse "1" //0
