--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -61,10 +61,11 @@ bind MOUSE2 "+moveup"
 bind MOUSE3 "+zoom"
 bind MWHEELDOWN "vstr z-"
 bind MWHEELUP "vstr z+"
-seta sensitivity "3.4"
-seta m_yaw "0.028" //0.022
-seta m_pitch "0.024" //0.022
-seta cl_mouseaccel "0.02" //0
+seta sensitivity "3.0"
+seta m_yaw "0.01" //0.022
+seta m_pitch "0.01" //0.022
+seta cl_mouseAccelOffset "8"//10
+seta cl_mouseaccel "0.5" //0
 seta cg_oversampleMouse "1" //0
 seta m_filter "1" //0
 seta in_mouse "1" //0
