--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -61,11 +61,11 @@ bind MOUSE2 "+moveup"
 bind MOUSE3 "+zoom"
 bind MWHEELDOWN "vstr z-"
 bind MWHEELUP "vstr z+"
-seta sensitivity "3.0"
+seta sensitivity "3.2"
 seta m_yaw "0.01" //0.022
 seta m_pitch "0.01" //0.022
-seta cl_mouseAccelOffset "8"//10
-seta cl_mouseaccel "0.5" //0
+seta cl_mouseAccelOffset "6"//10
+seta cl_mouseaccel "0.45" //0
 seta cg_oversampleMouse "1" //0
 seta m_filter "1" //0
 seta in_mouse "1" //0
@@ -82,9 +82,9 @@ bind 4 "weapon 4"
 bind 9 "weapon 9"
 bind f "weapon 8"
 bind m "weapon 9"
-bind e "weapon 5;cg_drawCrosshair 8;cg_crosshairsize 25"
-bind q "weapon 6;cg_drawCrosshair 9;cg_crosshairsize 22"
-bind r "weapon 7;cg_drawCrosshair 9;cg_crosshairsize 22"
+bind e "weapon 5;cg_drawCrosshair 5;cg_crosshairsize 75;ch_CrosshairColor white"
+bind q "weapon 6;cg_drawCrosshair 9;cg_crosshairsize 22;ch_CrosshairColor white"
+bind r "weapon 7;cg_drawCrosshair 9;cg_crosshairsize 22;ch_CrosshairColor white"
 bind [ "weapprev"
 bind ] "weapnext"
 
