--- a/osp/vp2ca_sens.cfg
+++ b/osp/vp2ca_sens.cfg
@@ -91,6 +91,7 @@ bind ] "weapnext"
 // other
 bind CTRL "cg_fov 125"
 bind z "cg_fov 125"
+bind b "com_maxfps 333"
 bind TAB "+scores"
 bind ENTER "+button2"
 bind ESCAPE "togglemenu"
