--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -90,7 +90,10 @@ bind ] "weapnext"
 
 // other
 bind CTRL "cg_fov 120"
-bind z "cg_fov 120"
+// Zoom
+set zoom "cg_fov 120;bind Z vstr zoom1" 
+set zoom1 "cg_fov 140;bind Z vstr zoom" 
+bind Z vstr zoom
 bind b "com_maxfps 333"
 bind TAB "+scores"
 bind ENTER "+button2"
