--- a/osp/scripts/biv_graph.cfg
+++ b/osp/scripts/biv_graph.cfg
@@ -1,3 +1,5 @@
+// меняет по F11 два режима графики серый игровой и цветной для скришотов
+
 set graph "vstr graph1"
 set graph1 "set graph vstr graph2; r_subdivisions 4; r_lodbias 0; r_vertexLight 
 0; r_nomip 1; cg_nomip 511; r_picmip 1; cg_simpleItems 0; com_blood 1; cg_shadows 
