--- a/osp/vp2ca_yawp.cfg
+++ b/osp/vp2ca_yawp.cfg
@@ -121,7 +121,7 @@ seta r_nomip "0"
 seta cg_shadows "1"
 
 // Fov
-seta cg_fov "125"
+seta cg_fov "120"
 seta cg_zoomfov "90"
 seta cg_viewsize "100"
 
@@ -163,7 +163,7 @@ seta r_preloadTextures "1"
 seta r_nocull "0"
 // обрабатывать скрытые от глаз объекты
 
-seta r_picmip "7"
+
 seta r_customheight "1024"
 seta r_customwidth "1600"
 seta r_fastsky "0"
@@ -184,15 +184,16 @@ seta r_dlightSpecPower "1"
 seta r_dlightIntensity "0.1" //0
 
 // Greyscaled vertex w half-shadows
-seta r_lightmap "0"
-seta r_vertexLight "1"
-seta r_mapGreyScale "0.8"
-seta r_intensity "2"
-seta r_mapOverBrightBits "1"
-seta r_overBrightBits "0"
-seta r_fullbright "0"
-seta r_gamma "1.4"
-seta r_ignorehwgamma "0"
+seta r_lightmap "1"//0
+seta r_vertexLight "0"//1
+seta r_mapGreyScale "0.95"//0.8
+seta r_intensity "3"//2
+seta r_mapOverBrightBits "0"//1
+seta r_overBrightBits "0"//0
+seta r_fullbright "0"//0
+seta r_gamma "1.5"//1.4
+seta r_ignorehwgamma "0"//0
+seta r_picmip "6"//0
 
 // Sound
 seta s_volume "0.08"
