--- a/osp/vp2ca_yawp.cfg
+++ b/osp/vp2ca_yawp.cfg
@@ -94,7 +94,7 @@ bind CTRL "cg_fov 120"
 set zoom "cg_fov 120;bind Z vstr zoom1" 
 set zoom1 "cg_fov 140;bind Z vstr zoom" 
 bind Z vstr zoom
-bind b "com_maxfps 333"
+bind l "com_maxfps 333"
 bind TAB "+scores"
 bind ENTER "+button2"
 bind ESCAPE "togglemenu"
