--- a/osp/vp2ca_yawp.cfg
+++ b/osp/vp2ca_yawp.cfg
@@ -51,6 +51,8 @@ bind s "+back"
 bind a "+moveleft"
 bind d "+moveright"
 bind c "+movedown"
+bind v "+movedown"
+bind b "+movedown"
 bind SPACE "vstr rj"
 bind ALT "+strafe"
 bind SHIFT "+speed"
