--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -82,10 +82,10 @@ bind 3 "weapon 3"
 bind 4 "weapon 4"
 
 bind 9 "weapon 9"
-bind f "weapon 8"
+bind f "weapon 8;cg_drawCrosshair 7;cg_crosshairsize 20;ch_CrosshairColor white"
 bind m "weapon 9"
-bind e "weapon 5;cg_drawCrosshair 5;cg_crosshairsize 25;ch_CrosshairColor white"
-bind q "weapon 6;cg_drawCrosshair 9;cg_crosshairsize 22;ch_CrosshairColor white"
+bind e "weapon 5;cg_drawCrosshair 13;cg_crosshairsize 25;ch_CrosshairColor white"
+bind q "weapon 6;cg_drawCrosshair 9;cg_crosshairsize 20;ch_CrosshairColor white"
 bind r "weapon 7;cg_drawCrosshair 9;cg_crosshairsize 20;ch_CrosshairColor white"
 bind [ "weapprev"
 bind ] "weapnext"
