--- a/osp/vp2ca_yawp.cfg
+++ b/osp/vp2ca_yawp.cfg
@@ -95,7 +95,7 @@ bind CTRL "cg_fov 120"
 // Zoom
 set zoom "cg_fov 120;bind z vstr zoom1" 
 set zoom1 "cg_fov 140;bind z vstr zoom" 
-bind Z vstr zoom
+bind z vstr zoom
 bind l "com_maxfps 333"
 bind TAB "+scores"
 bind ENTER "+button2"
