--- a/osp/vp2ca_yawp.cfg
+++ b/osp/vp2ca_yawp.cfg
@@ -4,8 +4,8 @@ unbindall
 // Player
 seta name "^1Killarbyte^7"
 seta nick "user"
-seta cg_enemyModel "tankjr/pm"
-seta cg_enemyColors "0iii"
+seta cg_enemyModel "keel/pm"
+seta cg_enemyColors "0xxx"
 seta model "xaero/pm"
 seta headmodel "xaero/pm"
 seta team_model "xaero/pm"
