--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -93,10 +93,10 @@ bind ] "weapnext"
 // Zoom
 set zoom "cg_fov 120;bind z vstr zoom1"
 set zoom1 "cg_fov 140;bind z vstr zoom"
+bind z "vstr zoom"
 
 // other
 bind CTRL "cg_fov 120"
-bind z vstr zoom
 bind l "com_maxfps 333"
 bind TAB "+scores"
 bind ENTER "+button2"
