--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -67,7 +67,7 @@ seta sensitivity "3.14"
 seta m_yaw "0.01" //0.022
 seta m_pitch "0.01" //0.022
 seta cl_mouseAccelOffset "3.14"//10
-seta cl_mouseaccel "0.47" //0
+seta cl_mouseaccel "0.60" //0 //0.47
 seta cg_oversampleMouse "1" //0
 seta m_filter "1" //0
 seta in_mouse "1" //0
@@ -91,8 +91,8 @@ bind [ "weapprev"
 bind ] "weapnext"
 
 // Zoom
-set zoom "cg_fov 120;bind z vstr zoom1"
-set zoom1 "cg_fov 140;bind z vstr zoom"
+set zoom "cg_fov 100;bind z vstr zoom1"
+set zoom1 "cg_fov 120;bind z vstr zoom"
 bind z "vstr zoom"
 
 // other
