--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -63,11 +63,11 @@ bind MOUSE2 "+moveup"
 bind MOUSE3 "+zoom"
 bind MWHEELDOWN "vstr z-"
 bind MWHEELUP "vstr z+"
-seta sensitivity "3.14"
+seta sensitivity "3.21"
 seta m_yaw "0.01" //0.022
 seta m_pitch "0.01" //0.022
-seta cl_mouseAccelOffset "3.14"//10
-seta cl_mouseaccel "0.60" //0 //0.47
+seta cl_mouseAccelOffset "3.21"//10
+seta cl_mouseaccel "0.47" //0 //0.47
 seta cg_oversampleMouse "1" //0
 seta m_filter "1" //0
 seta in_mouse "1" //0
@@ -84,9 +84,9 @@ bind 4 "weapon 4"
 bind 9 "weapon 9"
 bind f "weapon 8;cg_drawCrosshair 7;cg_crosshairsize 20;ch_CrosshairColor white"
 bind m "weapon 9"
-bind e "weapon 5;cg_drawCrosshair 13;cg_crosshairsize 25;ch_CrosshairColor white"
-bind q "weapon 6;cg_drawCrosshair 9;cg_crosshairsize 20;ch_CrosshairColor white"
-bind r "weapon 7;cg_drawCrosshair 9;cg_crosshairsize 20;ch_CrosshairColor white"
+bind e "weapon 5;cg_drawCrosshair 1;cg_crosshairsize 25;ch_CrosshairColor yellow"
+bind q "weapon 6;cg_drawCrosshair 6;cg_crosshairsize 20;ch_CrosshairColor yellow"
+bind r "weapon 7;cg_drawCrosshair 4;cg_crosshairsize 20;ch_CrosshairColor yellow"
 bind [ "weapprev"
 bind ] "weapnext"
 
