--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -111,6 +111,7 @@ bind F8 "ui_teamorders"
 bind F11 "screenshotJPEG"
 bind ENTER "+button2"
 bind n "+button3" //gesture
+bind k "playerlist"
 
 // nopicmip
 seta cg_nomip "511" //1023
