--- a/osp/vp2_sens.cfg
+++ b/osp/vp2_sens.cfg
@@ -91,12 +91,12 @@ bind [ "weapprev"
 bind ] "weapnext"
 
 // Zoom
-set zoom "cg_fov 100;bind z vstr zoom1"
-set zoom1 "cg_fov 120;bind z vstr zoom"
-bind z "vstr zoom"
+seta zoom "cg_fov 100;bind CTRL vstr zoom1"
+seta zoom1 "cg_fov 120;bind CTRL vstr zoom"
+bind CTRL "vstr zoom"
 
 // other
-bind CTRL "cg_fov 120"
+bind z "cg_fov 120"
 bind l "com_maxfps 333"
 bind TAB "+scores"
 bind ESCAPE "togglemenu"
