--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -91,12 +91,12 @@ bind [ "weapprev"
 bind ] "weapnext"
 
 // Zoom
-seta zoom "cg_fov 100;bind z vstr zoom1"
-seta zoom1 "cg_fov 120;bind z vstr zoom"
-bind z "vstr zoom"
+seta zoom "cg_fov 100;bind CTRL vstr zoom1"
+seta zoom1 "cg_fov 120;bind CTRL vstr zoom"
+bind CTRL "vstr zoom"
 
 // other
-bind CTRL "cg_fov 120"
+bind z "cg_fov 120"
 bind l "com_maxfps 333"
 bind TAB "+scores"
 bind ESCAPE "togglemenu"
@@ -170,7 +170,7 @@ seta r_drawSun "0"
 seta r_ext_multisample "8" //Forced Antialiasing
 seta r_ext_supersample "0" //0 Aditional antialiasing
 seta com_maxfps "250"
-seta com_maxfpsUnfocused "250"
+seta com_maxfpsUnfocused "60"
 seta maxFPS250 "1"
 
 // Dynamic Light
