--- a/osp/vp2_sens.cfg
+++ b/osp/vp2_sens.cfg
@@ -78,21 +78,21 @@ seta cl_pitchspeed "370"
 bind 0 "weapon 10"
 bind 1 "weapon 1"
 bind 2 "weapon 2"
-bind 3 "weapon 3"
+bind 3 "weapon 3;cg_drawCrosshair 4;cg_crosshairsize 20;ch_CrosshairColor green"
 bind 4 "weapon 4"
 
 bind 9 "weapon 9"
-bind f "weapon 8"
+bind f "weapon 8;cg_drawCrosshair 7;cg_crosshairsize 20;ch_CrosshairColor white"
 bind m "weapon 9"
-bind e "weapon 5;cg_drawCrosshair 8;cg_crosshairsize 25;ch_CrosshairColor white"
-bind q "weapon 6;cg_drawCrosshair 9;cg_crosshairsize 22;ch_CrosshairColor white"
-bind r "weapon 7;cg_drawCrosshair 9;cg_crosshairsize 20;ch_CrosshairColor white"
+bind e "weapon 5;cg_drawCrosshair 2;cg_crosshairsize 25;ch_CrosshairColor green"
+bind q "weapon 6;cg_drawCrosshair 6;cg_crosshairsize 20;ch_CrosshairColor green"
+bind r "weapon 7;cg_drawCrosshair 6;cg_crosshairsize 20;ch_CrosshairColor green"
 bind [ "weapprev"
 bind ] "weapnext"
 
 // Zoom
-seta zoom "cg_fov 100;bind CTRL vstr zoom1"
-seta zoom1 "cg_fov 120;bind CTRL vstr zoom"
+seta zoom "cg_fov 100;bind CTRL vstr zoom1;cl_mouseaccel 0.90"
+seta zoom1 "cg_fov 120;bind CTRL vstr zoom;cl_mouseaccel 0.47"
 bind CTRL "vstr zoom"
 
 // other
@@ -215,6 +215,11 @@ seta ui_browserGameType "0"
 seta ui_browserSortKey "4"
 seta ui_browserShowFull "1"
 seta ui_browserShowEmpty "1"
+
+// test settings
+seta com_affinityMask "8"
+seta r_bloom "0"
+seta in_minimize ctrl+i
 
 // system
 seta sv_pure "0"
