--- a/osp/vp2_yawp.cfg
+++ b/osp/vp2_yawp.cfg
@@ -217,6 +217,7 @@ seta ui_browserShowFull "1"
 seta ui_browserShowEmpty "1"
 
 // test settings
+seta cg_xerpClients "-1"
 seta com_affinityMask "4"
 seta r_bloom "0"
 seta in_minimize ctrl+i
