--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -112,6 +112,15 @@ bind F11 "screenshotJPEG"
 bind ENTER "+button2"
 bind n "+button3" //gesture
 bind k "playerlist"
+bind kp_end "vstr server1"
+bind kp_downarrow "vstr server2"
+bind kp_pgdn "vstr server3"
+bind kp_leftarrow "vstr server4"
+bind kp_5 "vstr server5"
+bind kp_rightarrow "vstr server6"
+bind kp_home "vstr server7"
+bind kp_uparrow "vstr server8"
+bind kp_pgup "vstr server9"
 
 // nopicmip
 seta cg_nomip "511" //1023
@@ -217,7 +226,7 @@ seta ui_browserShowFull "1"
 seta ui_browserShowEmpty "1"
 
 // test settings
-seta cg_xerpClients "-1"
+seta cg_xerpClients "1"//0
 seta com_affinityMask "4"
 seta r_bloom "0"
 seta in_minimize ctrl+i
@@ -400,7 +409,15 @@ seta q "connect q3msk.ru:27977"
 seta r_fullscreen "1"
 seta r_modefullscreen "-2"
 seta rj "+attack; +moveup; wait; wait; -attack; -moveup"
-seta server1 ""
+seta server1 "connect q3msk.ru:27977"//freezeTag
+seta server2 "connect q3msk.ru:27977"//null
+seta server3 "connect q3msk.ru:27977"//null
+seta server4 "connect q3msk.ru:27977"//null
+seta server5 "connect q3msk.ru:27977"//null
+seta server6 "connect q3msk.ru:27977"//null
+seta server7 "connect q3msk.ru:27977"//null
+seta server8 "connect q3msk.ru:27977"//null
+seta server9 "connect q3msk.ru:27977"//null
 seta server10 ""
 seta server11 ""
 seta server12 ""
@@ -408,14 +425,6 @@ seta server13 ""
 seta server14 ""
 seta server15 ""
 seta server16 ""
-seta server2 ""
-seta server3 ""
-seta server4 ""
-seta server5 ""
-seta server6 ""
-seta server7 ""
-seta server8 ""
-seta server9 ""
 seta sv_dlRate "100"
 seta sv_dlURL ""
 seta sv_filter "filter.txt"
