--- a/osp/vp2_yawp.cfg
+++ b/osp/vp2_yawp.cfg
@@ -217,7 +217,7 @@ seta ui_browserShowFull "1"
 seta ui_browserShowEmpty "1"
 
 // test settings
-seta cg_xerpClients "-1"
+seta cg_xerpClients "1"//0
 seta com_affinityMask "4"
 seta r_bloom "0"
 seta in_minimize ctrl+i
@@ -400,14 +400,7 @@ seta q "connect q3msk.ru:27977"
 seta r_fullscreen "1"
 seta r_modefullscreen "-2"
 seta rj "+attack; +moveup; wait; wait; -attack; -moveup"
-seta server1 ""
-seta server10 ""
-seta server11 ""
-seta server12 ""
-seta server13 ""
-seta server14 ""
-seta server15 ""
-seta server16 ""
+seta server1 "connect q3msk.ru:27977"//ft
 seta server2 ""
 seta server3 ""
 seta server4 ""
@@ -416,6 +409,13 @@ seta server6 ""
 seta server7 ""
 seta server8 ""
 seta server9 ""
+seta server10 ""
+seta server11 ""
+seta server12 ""
+seta server13 ""
+seta server14 ""
+seta server15 ""
+seta server16 ""
 seta sv_dlRate "100"
 seta sv_dlURL ""
 seta sv_filter "filter.txt"
