--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -112,9 +112,9 @@ bind F11 "screenshotJPEG"
 bind ENTER "+button2"
 bind n "+button3" //gesture
 bind k "playerlist"
-bind kp_end "vstr server1"
-bind kp_downarrow "vstr server2"
-bind kp_pgdn "vstr server3"
+bind kp_end "vstr server1"//freezeTag
+bind kp_downarrow "vstr server2"//ctf
+bind kp_pgdn "vstr server3"//ctf2
 bind kp_leftarrow "vstr server4"
 bind kp_5 "vstr server5"
 bind kp_rightarrow "vstr server6"
@@ -410,8 +410,8 @@ seta r_fullscreen "1"
 seta r_modefullscreen "-2"
 seta rj "+attack; +moveup; wait; wait; -attack; -moveup"
 seta server1 "connect q3msk.ru:27977"//freezeTag
-seta server2 "connect q3msk.ru:27977"//null
-seta server3 "connect q3msk.ru:27977"//null
+seta server2 "connect ctf.q3msk.ru:27960"//ctf
+seta server3 "connect ctf.q3msk.ru:27970"//ctf2
 seta server4 "connect q3msk.ru:27977"//null
 seta server5 "connect q3msk.ru:27977"//null
 seta server6 "connect q3msk.ru:27977"//null
