--- a/osp/vp2_yawp.cfg
+++ b/osp/vp2_yawp.cfg
@@ -222,6 +222,33 @@ seta com_affinityMask "4"
 seta r_bloom "0"
 seta in_minimize ctrl+i
 
+//servers
+bind kp_end "vstr server1"//freezeTag
+bind kp_downarrow "vstr server2"//ctf
+bind kp_pgdn "vstr server3"//ctf2
+bind kp_leftarrow "vstr server4"
+bind kp_5 "vstr server5"
+bind kp_rightarrow "vstr server6"
+bind kp_home "vstr server7"
+bind kp_uparrow "vstr server8"
+bind kp_pgup "vstr server9"
+seta server1 "connect q3msk.ru:27977"//freezeTag
+seta server2 "connect ctf.q3msk.ru:27960"//ctf
+seta server3 "connect ctf.q3msk.ru:27970"//ctf2
+seta server4 "connect q3msk.ru:27977"//null
+seta server5 "connect q3msk.ru:27977"//null
+seta server6 "connect q3msk.ru:27977"//null
+seta server7 "connect q3msk.ru:27977"//null
+seta server8 "connect q3msk.ru:27977"//null
+seta server9 "connect q3msk.ru:27977"//null
+seta server10 ""
+seta server11 ""
+seta server12 ""
+seta server13 ""
+seta server14 ""
+seta server15 ""
+seta server16 ""
+
 // system
 seta sv_pure "0"
 seta vm_cgame "2"
@@ -400,22 +427,6 @@ seta q "connect q3msk.ru:27977"
 seta r_fullscreen "1"
 seta r_modefullscreen "-2"
 seta rj "+attack; +moveup; wait; wait; -attack; -moveup"
-seta server1 "connect q3msk.ru:27977"//ft
-seta server2 ""
-seta server3 ""
-seta server4 ""
-seta server5 ""
-seta server6 ""
-seta server7 ""
-seta server8 ""
-seta server9 ""
-seta server10 ""
-seta server11 ""
-seta server12 ""
-seta server13 ""
-seta server14 ""
-seta server15 ""
-seta server16 ""
 seta sv_dlRate "100"
 seta sv_dlURL ""
 seta sv_filter "filter.txt"
