--- a/osp/vp2_sens.cfg
+++ b/osp/vp2_sens.cfg
@@ -223,24 +223,33 @@ seta r_bloom "0"
 seta in_minimize ctrl+i
 
 //servers
-bind kp_end "vstr server1"//freezeTag
-bind kp_downarrow "vstr server2"//ctf
-bind kp_pgdn "vstr server3"//ctf2
-bind kp_leftarrow "vstr server4"
-bind kp_5 "vstr server5"
-bind kp_rightarrow "vstr server6"
-bind kp_home "vstr server7"
-bind kp_uparrow "vstr server8"
-bind kp_pgup "vstr server9"
 seta server1 "connect q3msk.ru:27977"//freezeTag
+bind kp_end "vstr server1"
+
 seta server2 "connect ctf.q3msk.ru:27960"//ctf
+bind kp_downarrow "vstr server2"
+
 seta server3 "connect ctf.q3msk.ru:27970"//ctf2
-seta server4 "connect q3msk.ru:27977"//null
-seta server5 "connect q3msk.ru:27977"//null
-seta server6 "connect q3msk.ru:27977"//null
-seta server7 "connect q3msk.ru:27977"//null
-seta server8 "connect q3msk.ru:27977"//null
-seta server9 "connect q3msk.ru:27977"//null
+bind kp_pgdn "vstr server3"
+
+seta server4 "connect ca.q3msk.ru:27960"//ca1 PL
+bind kp_leftarrow "vstr server4"
+
+seta server5 "connect ca.q3msk.ru:27961"//ca2 PL
+bind kp_5 "vstr server5"
+
+seta server6 "connect ca.q3msk.ru:27962"//ca3 PL
+bind kp_rightarrow "vstr server6"
+
+seta server7 "connect meat.q3msk.ru:7700"//meat
+bind kp_home "vstr server7"
+
+seta server8 "connect meat.q3msk.ru:7707"//meat2
+bind kp_uparrow "vstr server8"
+
+seta server9 "connect q3msk.ru:27978"//freezeTag Clan Wars
+bind kp_pgup "vstr server9"
+
 seta server10 ""
 seta server11 ""
 seta server12 ""
