--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -4,7 +4,7 @@ unbindall
 // Player
 seta name "^1Killarbyte^7"
 seta nick "user"
-seta cg_enemyModel "keel/pm"
+seta cg_enemyModel "doom/pm"
 seta cg_enemyColors "0xxx"
 seta model "xaero/pm"
 seta headmodel "xaero/pm"
@@ -63,10 +63,10 @@ bind MOUSE2 "+moveup"
 bind MOUSE3 "+zoom"
 bind MWHEELDOWN "vstr z-"
 bind MWHEELUP "vstr z+"
-seta sensitivity "3.21"
+seta sensitivity "3.22"
 seta m_yaw "0.01" //0.022
 seta m_pitch "0.01" //0.022
-seta cl_mouseAccelOffset "3.21"//10
+seta cl_mouseAccelOffset "3.22"//10
 seta cl_mouseaccel "0.47" //0 //0.47
 seta cg_oversampleMouse "1" //0
 seta m_filter "1" //0
