--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -63,7 +63,7 @@ bind MOUSE2 "+moveup"
 bind MOUSE3 "+zoom"
 bind MWHEELDOWN "vstr z-"
 bind MWHEELUP "vstr z+"
-seta sensitivity "3.22"
+seta sensitivity "4"//3.22
 seta m_yaw "0.01" //0.022
 seta m_pitch "0.01" //0.022
 seta cl_mouseAccelOffset "3.22"//10
@@ -84,15 +84,15 @@ bind 4 "weapon 4"
 bind 9 "weapon 9"
 bind f "weapon 8;cg_drawCrosshair 7;cg_crosshairsize 20;ch_CrosshairColor white"
 bind m "weapon 9"
-bind e "weapon 5;cg_drawCrosshair 8;cg_crosshairsize 16;ch_CrosshairColor green"
-bind q "weapon 6;cg_drawCrosshair 8;cg_crosshairsize 16;ch_CrosshairColor green"
-bind r "weapon 7;cg_drawCrosshair 6;cg_crosshairsize 20;ch_CrosshairColor green"
+bind e "weapon 5;cg_drawCrosshair 8;cg_crosshairsize 16;ch_CrosshairColor 3"
+bind q "weapon 6;cg_drawCrosshair 8;cg_crosshairsize 16;ch_CrosshairColor 3"
+bind r "weapon 7;cg_drawCrosshair 6;cg_crosshairsize 20;ch_CrosshairColor 3"
 bind [ "weapprev"
 bind ] "weapnext"
 
 // Zoom
 seta zoom "cg_fov 105;bind CTRL vstr zoom1;cl_mouseaccel 0.75"
-seta zoom1 "cg_fov 125;bind CTRL vstr zoom;cl_mouseaccel 0.40"
+seta zoom1 "cg_fov 110;bind CTRL vstr zoom;cl_mouseaccel 0.47"
 bind CTRL "vstr zoom"
 
 // other
