--- a/osp/vp2_sens.cfg
+++ b/osp/vp2_sens.cfg
@@ -84,20 +84,20 @@ bind 4 "weapon 4"
 bind 9 "weapon 9"
 bind f "weapon 8;cg_drawCrosshair 7;cg_crosshairsize 20;ch_CrosshairColor white"
 bind m "weapon 9"
-bind e "weapon 5;cg_drawCrosshair 2;cg_crosshairsize 25;ch_CrosshairColor green"
-bind q "weapon 6;cg_drawCrosshair 6;cg_crosshairsize 20;ch_CrosshairColor green"
-bind r "weapon 7;cg_drawCrosshair 6;cg_crosshairsize 20;ch_CrosshairColor green"
+bind e "weapon 5;cg_drawCrosshair 8;cg_crosshairsize 16;ch_CrosshairColor 3"
+bind q "weapon 6;cg_drawCrosshair 8;cg_crosshairsize 16;ch_CrosshairColor 3"
+bind r "weapon 7;cg_drawCrosshair 6;cg_crosshairsize 20;ch_CrosshairColor 3"
 bind [ "weapprev"
 bind ] "weapnext"
 
 // Zoom
-seta zoom "cg_fov 100;bind CTRL vstr zoom1;cl_mouseaccel 0.90"
-seta zoom1 "cg_fov 120;bind CTRL vstr zoom;cl_mouseaccel 0.47"
+seta zoom "cg_fov 105;bind CTRL vstr zoom1;cl_mouseaccel 0.75"
+seta zoom1 "cg_fov 110;bind CTRL vstr zoom;cl_mouseaccel 0.47"
 bind CTRL "vstr zoom"
 
 // other
 bind z "cg_fov 120"
-bind l "com_maxfps 333"
+bind l "com_maxfps 250"
 bind TAB "+scores"
 bind ESCAPE "togglemenu"
 bind ` "toggleconsole"
