--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -112,6 +112,8 @@ bind F11 "screenshotJPEG"
 bind ENTER "+button2"
 bind n "+button3" //gesture
 bind k "playerlist"
+bind kp_ins "cl_timenudge 0"
+bind kp_del "cl_timenudge -25"
 
 // nopicmip
 seta cg_nomip "511" //1023
@@ -204,7 +206,7 @@ seta s_muteWhenUnfocused "1"
 
 // network
 seta rate "50000"
-seta snaps "125"
+seta snaps "1986"//125
 seta cl_timeNudge "0"
 seta cl_autoNudge "0"
 seta cl_packetdup "0"
