--- a/osp/vp2_sens.cfg
+++ b/osp/vp2_sens.cfg
@@ -204,7 +204,7 @@ seta s_muteWhenUnfocused "1"
 
 // network
 seta rate "50000"
-seta snaps "125"
+seta snaps "1986"//125
 seta cl_timeNudge "0"
 seta cl_autoNudge "0"
 seta cl_packetdup "0"
