--- a/osp/vp2_yawp.cfg
+++ b/osp/vp2_yawp.cfg
@@ -112,6 +112,8 @@ bind F11 "screenshotJPEG"
 bind ENTER "+button2"
 bind n "+button3" //gesture
 bind k "playerlist"
+bind kp_ins "cl_timenudge 0"
+bind kp_del "cl_timenudge -25"
 
 // nopicmip
 seta cg_nomip "511" //1023
