--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -112,8 +112,8 @@ bind F11 "screenshotJPEG"
 bind ENTER "+button2"
 bind n "+button3" //gesture
 bind k "playerlist"
-bind kp_ins "cl_timenudge 0"
-bind kp_del "cl_timenudge -25"
+bind kp_ins "cl_timeNudge 0"
+bind kp_del "cl_timeNudge -25"
 
 // nopicmip
 seta cg_nomip "511" //1023
