--- a/osp/vp2_yawp.cfg
+++ b/osp/vp2_yawp.cfg
@@ -115,6 +115,13 @@ bind k "playerlist"
 bind kp_ins "cl_timeNudge 0"
 bind kp_del "cl_timeNudge -25"
 
+bind kp_enter "for enter"
+bind kp_plus "for +"
+bind kp_minus "for -"
+bind kp_multiply "for star"
+bind kp_slash "for /"
+bind kp_numlock "for numlock."
+
 // nopicmip
 seta cg_nomip "511" //1023
 seta r_nomip "0"
