--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -96,7 +96,7 @@ seta zoom1 "cg_fov 120;bind CTRL vstr zoom;cl_mouseaccel 0.60"
 bind CTRL "vstr zoom"
 
 // other
-bind z "cg_fov 120"
+bind z "drop flag"
 bind l "com_maxfps 250"
 bind TAB "+scores"
 bind ESCAPE "togglemenu"
