--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -95,8 +95,11 @@ seta zoom "cg_fov 90;bind CTRL vstr zoom1;cl_mouseaccel 0.60"
 seta zoom1 "cg_fov 120;bind CTRL vstr zoom;cl_mouseaccel 0.60"
 bind CTRL "vstr zoom"
 
+//chat
+bind p "say_team [PU Soon]"
+bind z "drop flag;say_team [DROPING FLAG!]"
+
 // other
-bind z "drop flag"
 bind l "com_maxfps 250"
 bind TAB "+scores"
 bind ESCAPE "togglemenu"
