--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -99,6 +99,11 @@ bind CTRL "vstr zoom"
 bind p "say_team [PU Soon]"
 bind z "drop flag;say_team [DROPING FLAG!]"
 
+// Stats
+seta ston "+wstats;bind end vstr stoff"
+seta stoff "-wstats;bind end vstr ston"
+bind end "vstr ston"
+
 // other
 bind l "com_maxfps 250"
 bind TAB "+scores"
@@ -386,7 +391,7 @@ seta cg_predictItems "1"
 seta cg_q3compScoreboard "1"
 seta cg_scorePlums "1"
 seta cg_scoreTransparency "1.0"
-seta cg_showPlayerLean "1"
+seta cg_showPlayerLean "1" //1
 seta cg_statScrollTime "0.15"
 seta cg_stereoSeparation "0"
 seta cg_teamChatHeight "8"
