--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -104,6 +104,11 @@ seta ston "+wstats;bind end vstr stoff"
 seta stoff "-wstats;bind end vstr ston"
 bind end "vstr ston"
 
+// Testing
+seta teston "bind del vstr testoff;cg_showPlayerLean 1;say_team PlayerLean 1 > default;"
+seta testoff "bind del vstr teston;cg_showPlayerLean 1;say_team PlayerLean 1 > non default;"
+bind del "vstr teston"
+
 // other
 bind l "com_maxfps 250"
 bind TAB "+scores"
