--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -105,8 +105,8 @@ seta stoff "-wstats;bind end vstr ston"
 bind end "vstr ston"
 
 // Testing
-seta teston "bind del vstr testoff;cg_showPlayerLean 1;say_team PlayerLean 1 > default;"
-seta testoff "bind del vstr teston;cg_showPlayerLean 0;say_team PlayerLean 0 > non default;"
+seta teston "bind del vstr testoff;cg_showPlayerLean 1;echo PlayerLean 1 > default;"
+seta testoff "bind del vstr teston;cg_showPlayerLean 0;echo PlayerLean 0 > non default;"
 bind del "vstr teston"
 
 // other
