--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -97,7 +97,7 @@ bind CTRL "vstr zoom"
 
 //chat
 bind p "say_team [PU Soon]"
-bind z "drop flag;say_team [DROPING FLAG!]"
+bind z "drop flag;say_team ^7[^3DROPING ^1FLAG!^7]"
 
 //Stats
 seta ston "+wstats;bind end vstr stoff"
