--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -110,6 +110,7 @@ seta testoff "bind del vstr teston;cg_showPlayerLean 0;echo PlayerLean 0 > non d
 bind del "vstr teston"
 
 // other
+bind ins "playerlist"
 bind l "com_maxfps 250"
 bind TAB "+scores"
 bind ESCAPE "togglemenu"
@@ -124,7 +125,6 @@ bind F8 "ui_teamorders"
 bind F11 "screenshotJPEG"
 bind ENTER "+button2"
 bind n "+button3" //gesture
-bind k "playerlist"
 bind kp_ins "cl_timeNudge 0"
 bind kp_del "cl_timeNudge -25"
 
