--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -100,13 +100,13 @@ bind p "say_team [PU Soon]"
 bind z "drop flag;say_team ^7[^3DROPING ^1FLAG!^7]"
 
 //Stats
-seta ston "+wstats;bind end vstr stoff"
-seta stoff "-wstats;bind end vstr ston"
+seta ston "bind end vstr stoff;+wstats"
+seta stoff "bind end vstr ston;-wstats"
 bind end "vstr ston"
 
 // Testing
-seta teston "bind del vstr testoff;cg_showPlayerLean 1;echo PlayerLean 1 > default;"
-seta testoff "bind del vstr teston;cg_showPlayerLean 0;echo PlayerLean 0 > non default;"
+seta teston "bind del vstr testoff;cg_showPlayerLean 1;echo PlayerLean 1 > default"
+seta testoff "bind del vstr teston;cg_showPlayerLean 0;echo PlayerLean 0 > non default"
 bind del "vstr teston"
 
 // other
