--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -100,7 +100,7 @@ bind p "say_team [PU Soon]"
 bind z "drop flag;say_team ^7[^3DROPING ^1FLAG!^7]"
 
 // AFK
-seta afkon "bind home vstr afkoff;name [^3AFK^7]^1killarbyte"
+seta afkon "bind home vstr afkoff;name ^3AFK^7|^1killarbyte"
 seta afkoff "bind home vstr afkon;name ^1killarbyte"
 bind home "vstr afkon"
 
