--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -99,6 +99,7 @@ bind CTRL "vstr zoom"
 bind p "say_team [PU Soon]"
 bind z "drop flag;say_team ^7[^3DROPING ^1FLAG!^7]"
 
+// Players ping, snaps and nudge
 bind ins "playerlist"
 
 // AFK
@@ -106,15 +107,15 @@ seta afkon "bind home vstr afkoff;name ^3AFK^7|^1killarbyte"
 seta afkoff "bind home vstr afkon;name ^1killarbyte"
 bind home "vstr afkon"
 
-// Stats
-seta ston "bind end vstr stoff;+wstats"
-seta stoff "bind end vstr ston;-wstats"
-bind end "vstr ston"
-
 // Testing
 seta teston "bind del vstr testoff;cg_showPlayerLean 1;echo PlayerLean 1 > default"
 seta testoff "bind del vstr teston;cg_showPlayerLean 0;echo PlayerLean 0 > non default"
 bind del "vstr teston"
+
+// Stats
+seta ston "bind end vstr stoff;+wstats"
+seta stoff "bind end vstr ston;-wstats"
+bind end "vstr ston"
 
 // other
 bind l "com_maxfps 250"
