--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -108,8 +108,8 @@ seta afkoff "bind home vstr afkon;name ^1killarbyte"
 bind home "vstr afkon"
 
 // Testing
-seta teston "bind del vstr testoff;cg_showPlayerLean 1;echo PlayerLean 1 > default"
-seta testoff "bind del vstr teston;cg_showPlayerLean 0;echo PlayerLean 0 > non default"
+seta teston "bind del vstr testoff;cg_showPlayerLean 1;echo PlayerLean 1 > ^2default"
+seta testoff "bind del vstr teston;cg_showPlayerLean 0;echo PlayerLean 0 > ^3non default"
 bind del "vstr teston"
 
 // Stats
