--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -81,14 +81,10 @@ bind 2 "weapon 2"
 bind 3 "weapon 3;cg_drawCrosshair 4;cg_crosshairsize 20;ch_CrosshairColor green"
 bind 4 "weapon 4"
 
-bind 9 "weapon 9"
 bind f "weapon 8;cg_drawCrosshair 7;cg_crosshairsize 20;ch_CrosshairColor white"
-bind m "weapon 9"
 bind e "weapon 5;cg_drawCrosshair 2;cg_crosshairsize 20;ch_CrosshairColor 3"
 bind q "weapon 6;cg_drawCrosshair 8;cg_crosshairsize 16;ch_CrosshairColor 3"
 bind r "weapon 7;cg_drawCrosshair 6;cg_crosshairsize 19;ch_CrosshairColor 3"
-bind [ "weapprev"
-bind ] "weapnext"
 
 // Zoom
 seta zoom "cg_fov 90;bind CTRL vstr zoom1;cl_mouseaccel 0.60"
@@ -108,8 +104,8 @@ seta afkoff "bind home vstr afkon;name ^1killarbyte"
 bind home "vstr afkon"
 
 // Testing
-seta teston "bind del vstr testoff;cg_showPlayerLean 1;echo PlayerLean 1 > ^2default"
-seta testoff "bind del vstr teston;cg_showPlayerLean 0;echo PlayerLean 0 > ^3non default"
+seta teston "bind del vstr testoff;cg_showPlayerLean 1;echo [ ^3PlayerLean ^41 ^7> ^2default ^7]"
+seta testoff "bind del vstr teston;cg_showPlayerLean 0;echo [ ^3PlayerLean ^40 ^7> ^1non default ^7]"
 bind del "vstr teston"
 
 // Stats
