--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -113,6 +113,12 @@ seta ston "bind end vstr stoff;+wstats"
 seta stoff "bind end vstr ston;-wstats"
 bind end "vstr ston"
 
+// Team
+bind leftarrow "team red"
+bind rightarrow "team blue"
+bind uparrow "team free"
+bind downarrow "team s"
+
 // other
 bind l "com_maxfps 250"
 bind TAB "+scores"
