--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -75,7 +75,6 @@ seta cl_yawspeed "370"
 seta cl_pitchspeed "370"
 
 // weapon
-bind 0 "weapon 10"
 bind 1 "weapon 1"
 bind 2 "weapon 2"
 bind 3 "weapon 3;cg_drawCrosshair 4;cg_crosshairsize 20;ch_CrosshairColor green"
@@ -91,7 +90,12 @@ seta zoom "cg_fov 90;bind CTRL vstr zoom1;cl_mouseaccel 0.60"
 seta zoom1 "cg_fov 120;bind CTRL vstr zoom;cl_mouseaccel 0.60"
 bind CTRL "vstr zoom"
 
-//chat
+// Specating
+bind 0 "viewall"
+bind - "viewred"
+bind = "viewblue"
+
+// chat
 bind p "say_team [PU Soon]"
 bind z "drop flag;say_team ^7[^3DROPING ^1FLAG!^7]"
 
