--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -92,10 +92,14 @@ bind CTRL "vstr zoom"
 
 // Specating
 bind 0 "viewall"
-bind - "viewred"
-bind = "viewblue"
+bind [ "viewred"
+bind ] "viewblue"
 
 // chat
+bind 5 "say_team ^7[^1EFC HIGH^7]"
+bind t "say_team ^7[^1EFC LOW^7]"
+bind g "say_team ^7[^3!!!^1HELP^3!!!^7]"
+bind h "say_team ^7[^3!!!^1HELP^3!!!^7]"
 bind p "say_team [PU Soon]"
 bind z "drop flag;say_team ^7[^3DROPING ^1FLAG!^7]"
 
@@ -139,7 +143,6 @@ bind ENTER "+button2"
 bind n "+button3" //gesture
 bind kp_ins "cl_timeNudge 0"
 bind kp_del "cl_timeNudge -25"
-bind t "messagemode"
 
 bind kp_enter "for enter"
 bind kp_plus "for +"
