--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -140,6 +140,7 @@ bind F3 "ready"
 bind F8 "ui_teamorders"
 bind F11 "screenshotJPEG"
 bind ENTER "+button2"
+bind capslock "+button2"
 bind n "+button3" //gesture
 bind kp_ins "cl_timeNudge 0"
 bind kp_del "cl_timeNudge -25"
