--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -96,8 +96,8 @@ bind [ "viewred"
 bind ] "viewblue"
 
 // chat
-bind 5 "say_team ^7[^1EFC HIGH^7]"
-bind t "say_team ^7[^1EFC LOW^7]"
+//bind 5 "say_team ^7[^1EFC HIGH^7]"
+//bind t "say_team ^7[^1EFC LOW^7]"
 bind g "say_team ^7[^3!!!^1HELP^3!!!^7]"
 bind h "say_team ^7[^3!!!^1HELP^3!!!^7]"
 bind p "say_team [PU Soon]"
@@ -413,7 +413,7 @@ seta cg_predictItems "1"
 seta cg_q3compScoreboard "1"
 seta cg_scorePlums "1"
 seta cg_scoreTransparency "1.0"
-seta cg_showPlayerLean "1" //1
+seta cg_showPlayerLean "0" //1 Def
 seta cg_statScrollTime "0.15"
 seta cg_stereoSeparation "0"
 seta cg_teamChatHeight "8"
