--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -170,7 +170,7 @@ seta r_mode "5"
 seta vid_xpos "100"
 seta vid_ypos "100"
 //seta r_ext_compressed_textures "1" // ?
-seta r_texturemode "GL_NEAREST" // GL_NEAREST / GL_LINEAR / GL_NEAREST_MIPMAP_NEAREST / GL_LINEAR_MIPMAP_NEAREST / GL_NEAREST_MIPMAP_LINEAR / GL_LINEAR_MIPMAP_LINEAR
+seta r_texturemode "GL_LINEAR_MIPMAP_LINEAR" // GL_NEAREST / GL_LINEAR / GL_NEAREST_MIPMAP_NEAREST / GL_LINEAR_MIPMAP_NEAREST / GL_NEAREST_MIPMAP_LINEAR / GL_LINEAR_MIPMAP_LINEAR
 seta r_texturebits "16"
 seta r_detailtextures "0"
 seta r_depthbits "16"
