--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -6,7 +6,7 @@ seta name "^1Killarbyte^7"
 seta nick "user"
 seta cg_enemyModel "keel/pm"
 seta cg_enemyColors "0xxx"
-seta model "xaero/pm"
+seta model "major/pm"//xaero/pm
 seta headmodel "xaero/pm"
 seta team_model "xaero/pm"
 seta team_headmodel "xaero/pm"
