--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -261,6 +261,9 @@ seta com_affinityMask "4"
 seta r_bloom "0"
 seta in_minimize ctrl+i
 
+// xq3 settings
+seta x_ps_auto_revival "0"//1
+
 //servers
 seta server1 "connect q3msk.ru:27977"//freezeTag
 bind kp_end "vstr server1"
