--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -267,7 +267,7 @@ seta x_ps_auto_revival "0"//1
 seta server1 "connect q3msk.ru:27977"//freezeTag
 bind kp_end "vstr server1"
 
-seta server2 "connect ctf.q3msk.ru:27960"//ctf
+seta server2 "connect connect spb.q3msk.ru:777"//ctf ctf.q3msk.ru:27960
 bind kp_downarrow "vstr server2"
 
 seta server3 "connect ctf.q3msk.ru:27970"//ctf2
