--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -147,7 +147,6 @@ bind kp_del "cl_timeNudge -25"
 bind kp_enter "for enter"
 bind kp_plus "for +"
 bind kp_minus "for -"
-bind kp_multiply "for star"
 bind kp_slash "for /"
 bind kp_numlock "for numlock."
 
@@ -262,6 +261,9 @@ seta in_minimize ctrl+i
 
 // xq3 settings
 seta x_ps_auto_revival "0"//1
+
+seta portzz "x_net_port_renew"
+bind kp_multiply "vstr portzz"
 
 //servers
 seta server1 "connect q3msk.ru:27977"//freezeTag
