--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -146,7 +146,7 @@ bind kp_del "cl_timeNudge -25"
 
 bind kp_enter "for enter"
 bind kp_plus "for +"
-bind kp_minus "for -"
+bind kp_minus "net_restart; echo [^2Netword Restarted^7]"
 bind kp_slash "for /"
 bind kp_numlock "for numlock."
 
@@ -261,9 +261,7 @@ seta in_minimize ctrl+i
 
 // xq3 settings
 seta x_ps_auto_revival "0"//1
-
-seta portzz "x_net_port_renew"
-bind kp_multiply "vstr portzz"
+bind kp_multiply "x_net_port_renew"
 
 //servers
 seta server1 "connect q3msk.ru:27977"//freezeTag
