--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -146,9 +146,10 @@ bind kp_del "cl_timeNudge -25"
 
 bind kp_enter "for enter"
 bind kp_plus "for +"
-bind kp_minus "net_restart; echo [^2Netword Restarted^7]"
-bind kp_slash "for /"
-bind kp_numlock "for numlock."
+bind kp_numlock "echo numlock"
+bind kp_slash "echo /"
+bind * "x_net_port_renew"
+bind kp_minus "net_restart; net_port6 "0"; echo [^2Netword Restarted^7]"
 
 // nopicmip
 seta cg_nomip "511" //1023
@@ -261,7 +262,6 @@ seta in_minimize ctrl+i
 
 // xq3 settings
 seta x_ps_auto_revival "0"//1
-bind kp_multiply "x_net_port_renew"
 
 //servers
 seta server1 "connect q3msk.ru:27977"//freezeTag
