--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -141,15 +141,15 @@ bind F11 "screenshotJPEG"
 bind ENTER "+button2"
 bind capslock "+button2"
 bind n "+button3" //gesture
-bind kp_ins "cl_timeNudge 0"
-bind kp_del "cl_timeNudge -25"
 
-bind kp_enter "for enter"
-bind kp_plus "for +"
-bind kp_numlock "echo numlock"
-bind kp_slash "echo /"
+bind kp_plus "echo +"
+bind kp_numlock "ScreenShotJPEG"
+bind kp_slash "ScreenShotJPEG"
 bind * "x_net_port_renew"
 bind kp_minus "net_restart; net_port6 "0"; echo [^2Netword Restarted^7]"
+bind kp_ins "cl_timeNudge 0"
+bind kp_del "cl_timeNudge -25"
+bind kp_enter "echo enter"
 
 // nopicmip
 seta cg_nomip "511" //1023
