--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -348,7 +348,7 @@ seta cg_smokegrowth_gl "1"
 seta cg_smokegrowth_rl "1"
 seta cg_smokeradius_gl "1"
 seta cg_smokeradius_rl "1"
-seta cg_simpleItems "0"
+seta cg_simpleItems "1"//0
 
 
 
