--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -142,6 +142,7 @@ bind ENTER "+button2"
 bind capslock "+button2"
 bind n "+button3" //gesture
 
+bind 5 "cg_fov 130"
 bind kp_plus "echo +"
 bind kp_numlock "ScreenShotJPEG"
 bind kp_slash "ScreenShotJPEG"
@@ -262,6 +263,7 @@ seta in_minimize ctrl+i
 
 // xq3 settings
 seta x_ps_auto_revival "0"//1
+seta x_net_port_auto_renew "0"//1
 
 //servers
 seta server1 "connect q3msk.ru:27977"//freezeTag
