--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -54,9 +54,9 @@ bind d "+moveright"
 bind c "+movedown"
 bind v "+movedown"
 bind b "+movedown"
-bind SPACE "vstr rj"
+bind SPACE "+speed"
 bind ALT "+strafe"
-bind SHIFT "+speed"
+bind SHIFT "vstr rj"
 
 // mouse
 bind MOUSE1 "+attack"
@@ -83,7 +83,7 @@ bind 4 "weapon 4"
 
 bind f "weapon 8;cg_drawCrosshair 7;cg_crosshairsize 20;ch_CrosshairColor white"
 bind e "weapon 5;cg_drawCrosshair 2;cg_crosshairsize 20;ch_CrosshairColor 3"
-bind q "weapon 6;cg_drawCrosshair 8;cg_crosshairsize 16;ch_CrosshairColor 3"
+bind q "weapon 6;cg_drawCrosshair 29;cg_crosshairsize 16;ch_CrosshairColor 3"
 bind r "weapon 7;cg_drawCrosshair 6;cg_crosshairsize 19;ch_CrosshairColor 3"
 
 // Zoom
