--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -54,9 +54,9 @@ bind d "+moveright"
 bind c "+movedown"
 bind v "+movedown"
 bind b "+movedown"
-bind SPACE "+speed"
+bind SPACE "vstr rj"
 bind ALT "+strafe"
-bind SHIFT "vstr rj"
+bind SHIFT "+speed"
 
 // mouse
 bind MOUSE1 "+attack"
