--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -64,7 +64,7 @@ bind MOUSE2 "+moveup"
 bind MOUSE3 "+zoom"
 bind MWHEELDOWN "vstr z-"
 bind MWHEELUP "vstr z+"
-seta sensitivity "2.57"//3.20
+seta sensitivity "2.60"//3.20
 seta m_yaw "0.01" //0.022
 seta m_pitch "0.01" //0.022
 seta cl_mouseAccelOffset "2.57"//3.20
@@ -77,14 +77,14 @@ seta cl_pitchspeed "370"
 
 // weapon
 bind 1 "weapon 1"
-bind 2 "weapon 2"
+bind 2 "weapon 2;cg_drawCrosshair 41;cg_crosshairsize 15;ch_CrosshairColor 3"
 bind 3 "weapon 3;cg_drawCrosshair 27;cg_crosshairsize 20;ch_CrosshairColor green"
 bind 4 "weapon 4"
 
 bind f "weapon 8;cg_drawCrosshair 7;cg_crosshairsize 20;ch_CrosshairColor white"
-bind e "weapon 5;cg_drawCrosshair 2;cg_crosshairsize 20;ch_CrosshairColor 3"
-bind q "weapon 6;cg_drawCrosshair 29;cg_crosshairsize 16;ch_CrosshairColor 3"
-bind r "weapon 7;cg_drawCrosshair 6;cg_crosshairsize 19;ch_CrosshairColor 3"
+bind e "weapon 5;cg_drawCrosshair 48;cg_crosshairsize 20;ch_CrosshairColor 3"
+bind q "weapon 6;cg_drawCrosshair 41;cg_crosshairsize 15;ch_CrosshairColor 3"
+bind r "weapon 7;cg_drawCrosshair 41;cg_crosshairsize 15;ch_CrosshairColor 3"
 
 // Zoom
 seta zoom "cg_fov 95;bind CTRL vstr zoom1;cl_mouseaccel 0.60"
