--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -5,7 +5,7 @@ unbindall
 // Player
 seta name "^1Killarbyte^7"
 seta nick "user"
-seta cg_enemyModel "keel/pm"
+seta cg_enemyModel "tankjr/pm"//keel/pm
 seta cg_enemyColors "0xxx"
 seta model "major/pm" //xaero/pm
 seta headmodel "xaero/pm"
@@ -52,7 +52,6 @@ bind s "+back"
 bind a "+moveleft"
 bind d "+moveright"
 bind c "+movedown"
-bind v "+movedown"
 bind b "+movedown"
 bind SPACE "vstr rj"
 bind ALT "+strafe"
@@ -79,9 +78,9 @@ seta cl_pitchspeed "370"
 bind 1 "weapon 1"
 bind 2 "weapon 2;cg_drawCrosshair 41;cg_crosshairsize 15;ch_CrosshairColor 3"
 bind 3 "weapon 3;cg_drawCrosshair 27;cg_crosshairsize 20;ch_CrosshairColor green"
-bind 4 "weapon 4"
+bind 4 "weapon 4;cg_drawCrosshair 25;cg_crosshairsize 15;ch_CrosshairColor 3"
 
-bind f "weapon 8;cg_drawCrosshair 7;cg_crosshairsize 20;ch_CrosshairColor white"
+bind v "weapon 8;cg_drawCrosshair 7;cg_crosshairsize 20;ch_CrosshairColor white"
 bind e "weapon 5;cg_drawCrosshair 48;cg_crosshairsize 20;ch_CrosshairColor 3"
 bind q "weapon 6;cg_drawCrosshair 41;cg_crosshairsize 15;ch_CrosshairColor 3"
 bind r "weapon 7;cg_drawCrosshair 41;cg_crosshairsize 15;ch_CrosshairColor 3"
