--- a/osp/vp2_accel.cfg
+++ b/osp/vp2_accel.cfg
@@ -53,7 +53,7 @@ bind a "+moveleft"
 bind d "+moveright"
 bind c "+movedown"
 bind b "+movedown"
-bind SPACE "vstr rj"
+bind SPACE "cg_fov 130"
 bind ALT "+strafe"
 bind SHIFT "+speed"
 
@@ -86,8 +86,8 @@ bind r "weapon 7;cg_drawCrosshair 41;cg_crosshairsize 15;ch_CrosshairColor 3"
 bind v "weapon 8;cg_drawCrosshair 7;cg_crosshairsize 20;ch_CrosshairColor white"
 
 // Zoom
-seta zoom "cg_fov 95;bind CTRL vstr zoom1;cl_mouseaccel 0.60"
-seta zoom1 "cg_fov 115;bind CTRL vstr zoom;cl_mouseaccel 0.60"
+seta zoom "cg_fov 93;bind CTRL vstr zoom1;cl_mouseaccel 0.58"
+seta zoom1 "cg_fov 115;bind CTRL vstr zoom;cl_mouseaccel 0.58"
 bind CTRL "vstr zoom"
 
 // Specating
@@ -263,6 +263,7 @@ seta in_minimize ctrl+i
 // xq3 settings
 seta x_ps_auto_revival "0"//1
 seta x_net_port_auto_renew "0"//1
+seta x_ch_decor_action "3"//0
 
 //servers
 seta server1 "connect q3msk.ru:27977"//freezeTag
